# tolerant-computing-2023

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  build.sh  config.toml
project1/: Cargo.toml  README.md
project1/proto/: voting.proto
proto/: voting.proto
src/: args.rs  client.rs  config.rs  internal_election.rs  internal_voter.rs  proto.rs  server.rs  token_manager.rs  voting.rs
src/controllers/: election.rs  mod.rs  token.rs  voter.rs
src/models/: delete.rs  election.rs  mod.rs  token.rs  voter.rs
