[package]
name = "voting-system"
version = "0.1.0"
authors = ["Po-Yeh Chen <poyehchen@cs.nctu.edu.tw>", "Shao-Fu Chen <shfchen@cs.nycu.edu.tw>"]
rust-version = "1.60.0"
edition = "2021"
publish = false

[[bin]]
name = "voting-server"
path = "src/server.rs"

[[bin]]
name = "voting-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"
