[package]
name = "voting-system"
version = "0.1.0"
authors = [
    "Po-Yeh Chen <poyehchen@cs.nctu.edu.tw>",
    "Shao-Fu Chen <shfchen@cs.nycu.edu.tw>",
]
rust-version = "1.60.0"
edition = "2021"
publish = false

[profile.release]
strip = "debuginfo"

[[bin]]
name = "voting-server"
path = "src/server.rs"

[[bin]]
name = "voting-client"
path = "src/client.rs"

[dependencies]
base64 = "0.21"
dashmap = "5.4"
flume = "0.10"
once_cell = "1.17"
prost = "0.11"
prost-types = "0.11"
rustyline = "11.0"
tonic = "0.8"

[dependencies.clap]
version = "4.2"
features = ["derive"]

[dependencies.ed25519-dalek]
version = "1"
features = ["rand_core"]

[dependencies.rand_core]
version = "0.5"
features = ["getrandom"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[build-dependencies]
tonic-build = "0.8"
