[package]
name = "voting-system"
version = "0.1.0"
authors = [
    "Po-Yeh Chen <poyehchen@cs.nctu.edu.tw>",
    "Shao-Fu Chen <shfchen@cs.nycu.edu.tw>",
]
rust-version = "1.65.0"
edition = "2021"
publish = false

[profile.release]
strip = "debuginfo"

[[bin]]
name = "voting-server"
path = "src/server.rs"

[[bin]]
name = "voting-client"
path = "src/client.rs"

[dependencies]
base64 = "0.21"
dashmap = "5.4"
prost = "0.11"
prost-types = "0.11"
tonic = "0.8"
chrono = "0.4.24"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
couch_rs = "0.9.2"

[dependencies.clap]
version = "4.2"
features = ["derive"]

[dependencies.duration-str]
version = "0.5"
default-features = false

[dependencies.ed25519-dalek]
version = "1"
features = ["rand_core"]

[dependencies.rand_core]
version = "0.5"
features = ["getrandom"]

[dependencies.rustyline]
version = "11.0"
features = ["with-file-history"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "time"]

[build-dependencies]
tonic-build = "0.8"
