[package]
name = "project1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "prj1-voting-server"
path = "src/server.rs"

[[bin]]
name = "prj1-voting-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"
